htdocs/theme/raw/sass/components/_list-group.scss
// // modifications for list elements such a list of pages, collections

// Left card
.list-group {
    margin-bottom: 0;
    a {
        // color: inherit;
        &.tag {
            display:inline-block;
            @extend .text-success;
        }
        &.text-success {
             @extend .text-success;
        }
        &.text-link {
            @extend .text-link;
        }

    }
    .card &,
    .card-body & {
        margin-bottom: 0;
    }
    .user-card & {
        min-height: 41px;
    }

    .list-nested {
        margin: 5px -15px 0;
        > li > a {
            padding: 3px 15px;
        }
        small {
            @extend .text-midtone;
        }
    }
    &.list-group-unbordered {
        li {
            border:0;
            padding: 5px 7px;
        }
        .small {
            padding: 0;
            a {
                padding: 5px 0;
            }
        }
    }
    &.list-group-lite .list-group-item {
        border-radius: 0;
        border-left: 0;
        border-right: 0;
    }

    &.attachment-incontent {
        border-left: 1px solid $list-group-border-color; // Full Journal attachment list block
    }
}

.list-group-item,
.usericon-heading {
    .inner-link.with-introduction {
        span {
            margin-right: 5px;
        }
    }
}

.list-group-item-heading {
    font-family: $font-family-serif;
    font-weight: 300;
    margin-top: 0;
    margin-bottom: 5px;
    a {
        &:hover {
            color: $link-color;
            &.inner-link {
                text-decoration: underline;
            }
            .metadata {
                color: $link-color;
            }
        }
        &.collapsible {
            display: block;
        }
    }

    .collection-item & {
        font-size: $h3-font-size;
    }
}

.list-group-item h4.list-group-item-heading {
    font-size: $font-size-base + 0.0715;
    margin-bottom: 5px;
    a {
        padding: 0;
    }
}

.list-group-item h5 {
    font-size: $font-size-base + 0.0715;
}

.list-group-item-warning {
    background-color: $state-warning-bg;
    .list-group-item-heading {
        color: $state-warning-text;

    }
}

// Sidebar notification item styles
.list-group-item-profile-notification {
    word-wrap: normal;
    word-break: break-all;
    white-space: normal;
    &:first-child {
        padding-right: 80px;
    }
}

// Attachment list
.list-group-item-link {
    padding: 0;
    a {
        @extend .text-default;
        font-size: $font-size-sm;
        display: block;
        padding: 10px 15px;
        &:hover {
            background: #efefef;
            text-decoration: none;
            color: scale-color($link-color, $lightness: -16%);
        }
        small {
            color: $link-color;
        }
        .file-icon {
            display: inline-block;
            width: 22px;
            height: 22px;
            margin-right: 5px;
        }
        .file-title {
            display: inline-block;
            vertical-align: middle;
        }
        .file-size {
            float: right;
            color: $theme-text-lighttone-color;
        }
    }

    // Online user link see onlineusers.tpl
    .online-user {
        position: relative;
        padding-left: 50px;
        min-height: 50px;
        line-height: 28px;

        .user-icon {
            position: absolute;
            left: 20px;
            top: 15px;
        }

        .user-name {
            display: inline-block;
            vertical-align: middle;
            line-height: 1.5;
        }
    }
}

// list-group-item with btn-group
.list-group-item {
    border-left-width: 0;
    border-right-width: 0;
    &.draft,
    &.list-group-item-warning {
        @extend .list-group-item-warning;
    }
    &.published {
        background: scale-color($card-header-bg, $lightness: 50%);
    }
    &.flush {
        padding: 10px 0;
    }
    &.list-group-item-heading {
        margin-bottom: 0;
    }
    .list-group-item-heading {
        float: none;
        @include media-breakpoint-up(md) {
            float: left;
        }
        .card & {
            float: none;
        }
    }
    .list-group-item-controls {
        float: none;
        @include media-breakpoint-up(md) {
            float: right;
        }
        // For planlist page
        .btn-group-top {
            margin-top: 0;
            float:none;
            @include media-breakpoint-up(md) {
                margin-top: 5px;
            }
            @include media-breakpoint-up(lg) {
                margin-top: -13px;
            }
        }
    }
    .list-group-item-detail {
        margin: 10px 0;
    }
    .btn-title {
        padding-left: 5px;
        @include media-breakpoint-down(md) {
            @include sr-only;
        }
    }
    .usericon-heading {
        @extend .clearfix;
        padding-bottom: 8px;
        .user-icon {
            display: block;
            margin: 0 5px 0 0;
        }
        .list-group-item-heading {
            margin: 0;
            &.middle {
                margin: 10px 0;
            }
        }
        .list-group-item-heading + .btn {
            margin-top: 10px;
        }
    }
    .post-heading {
        @extend .clearfix;
        margin: 10px 0;
    }
    &.ui-sortable-handle {
        border-bottom: 1px solid $list-group-border-color;
    }
}

.list-group-item-default{
    background-color: rgba(scale-color(theme-color("secondary"), $lightness: 62.75), 0.5);
}

.list-group-item-text {
    margin-top: 5px;
    background-color: $white;
    line-height: 1.3;
}

// Modifiy for list-groups in cards
.card > .block {
    > .list-group {
        margin-bottom: 0;
    }
    .list-group {
        .list-group-item {
            border-radius: 0;
        }
        &:last-child .list-group-item:last-child{
            border-bottom: 0;
            border-bottom-right-radius: 3px;
            border-bottom-left-radius: 3px;
        }
    }
}

.grouppages .list-group-item {
    h5 {
        font-size: $font-size-base;
        margin-top: 0;
        margin-bottom: 0;
    }
    .detail {
        padding-top: 8px;
    }
    + .pagination-container {
        padding-top: 10px;
    }
}

.card-header + .block > .list-group .list-group-item:first-child,
.list-group + .card-footer {
    border-top-width: 0;
}

.section-import {
    .list-group-item .list-group,
    .fieldset-body .list-group {
        padding-top: 10px;
        margin-bottom: 0;
        .list-group-item:last-child {
            border-bottom: 0;
        }
    }
    .list-group-item {
        .list-group-item-heading {
            float: none;
        }
    }
}

.annotation-feedback {
    border-top: 1px solid $list-group-border-color !important;
}

.feedback.modal {
    .btn-group-top.comment-item-buttons {
        margin-top: -10px;
    }
}

.column-list {
    -moz-column-count: 3;
    -moz-column-gap: 20px;
    -webkit-column-count: 3;
    -webkit-column-gap: 20px;
    column-count: 3;
    column-gap: 20px;
    @include media-breakpoint-down(md) {
        -moz-column-count: 2;
        -moz-column-gap: 20px;
        -webkit-column-count: 2;
        -webkit-column-gap: 20px;
        column-count: 2;
        column-gap: 20px;
    }
}

.column-list li {
    list-style-position: inside;
    span.help {
        font-size: inherit;
        .icon {
            font-size: 16px;
        }
    }
}

.showmore {
    text-align: center;
    clear: both;
    width: 100%;
    cursor: pointer;
}

